--- a/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
+++ b/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
@@ -17,16 +17,16 @@
             <div class="card-body">
               <form [formGroup]="categoryForm" >
                 <div class="form-group row">
-                  <label for="category" class="col-md-4 col-form-label text-md-right">Category</label>
+                  <label for="name" class="col-md-4 col-form-label text-md-right">Category</label>
                   <div class="col-md-6">
                     <input type="text"
-                           [formControl]="categoryForm.get('category')"
-                           [ngClass]="{'is-invalid': isValid('category')}"
-                           id="category"
+                           [formControl]="categoryForm.get('name')"
+                           [ngClass]="{'is-invalid': isValid('name')}"
+                           id="name"
                            class="form-control"
-                           name="category" autofocus>
-                    <div *ngIf="hasError('category')" class="invalid-feedback">
-                      category is required
+                           name="name" autofocus>
+                    <div *ngIf="hasError('name')" class="invalid-feedback">
+                      name is required
                     </div>
                   </div>
                 </div>
