--- a/web/src/app/modules/admin/manage-category/category-list/category-list.component.html
+++ b/web/src/app/modules/admin/manage-category/category-list/category-list.component.html
@@ -26,7 +26,7 @@
             <td>{{i+1}}</td>
             <td>{{category.name}}</td>
             <td>
-              <a [routerLink]="['/edit-category']" class="btn btn-outline-primary">
+              <a [routerLink]="['/edit-category', category.id ]" class="btn btn-outline-primary">
                 <i class="fa fa-pencil" aria-hidden="true"></i> Edit Category
               </a> &nbsp;&nbsp;
               <a class="btn btn-outline-danger" (click)="deleteCategory(category.id)">
