fix get product

--- a/web/src/app/modules/admin/manage-product/approve-product/approve-product.component.html
+++ b/web/src/app/modules/admin/manage-product/approve-product/approve-product.component.html
@@ -3,13 +3,13 @@
 <table class="table table-hover" style="table-layout: fixed;">
   <thead>
     <tr>
-      <th>#</th>
-      <th style="width: 10%;"scope="col" nowrap>Product Name</th>
-      <th style="width: 20%;"scope="col">Short Description</th>
+      <th style="width: 5%;">#</th>
+      <th style="width: 10%;"scope="col" nowrap>Name</th>
+      <th style="width: 15%;"scope="col">Short Description</th>
       <th style="width: 40%;" scope="col">Description</th>
-      <th style="width: 5%;"scope="col">Price</th>
-      <th scope="col">Vendor</th>
-      <th style="width: 15%;"scope="col" colSpan="2">Actions</th>
+      <th style="width: 10%;"scope="col">Price</th>
+      <th style="width: 15%;"scope="col">Vendor</th>
+      <th style="width: 20%;"scope="col" colSpan="2">Actions</th>
     </tr>
   </thead>
   <tbody>
