--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -24,7 +24,7 @@
             </a>
             <div class="media-body pd row">
               <div class="col-md-7 col-sm-12"><h4 class="media-heading">{{product.name}}</h4></div>
-              <div class="col-md-5 col-sm-12"><p class="text-right">By {{product.vendorName}}</p></div>
+              <div class="col-md-5 col-sm-12"><p class="text-right">By {{product.user.name}}</p></div>
               <div class="col-12">
                 <p>{{product.shortDescription}}</p>
                 <p>{{product.description}}</p>
