--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -16,10 +16,10 @@
           <a class="nav-link" [routerLink]="['home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['my-orders', authService.currentUser.id]" *ngIf="authService.isAuthenticated">My Orders</a>
+          <a class="nav-link" [routerLink]="['my-orders', authService.currentUser.id]" *ngIf="authService.isAuthenticated && authService.currentUser.role.id==3">My Orders</a>
         </li>
 
-        <li class="nav-item dropdown" *ngIf="authService.isAuthenticated">
+        <li class="nav-item dropdown" *ngIf="authService.isAdmin">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="admin" aria-expanded="false">
             Admin <span class="caret"></span>
           </a>
@@ -27,21 +27,21 @@
             <a class="dropdown-item" [routerLink]="['manage-users']">Manage Users</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['product-list']">Manage Products</a>
-            <a class="dropdown-item" [routerLink]="['approve-product']">Review Products</a>
-            <a class="dropdown-item" [routerLink]="['rejected-product']">Rejected Products</a>
-            <a class="dropdown-item" [routerLink]="['categories']">Manage Categories</a>
+            <a class="dropdown-item" *ngIf="authService.currentUser.role.id==1" [routerLink]="['approve-product']">Review Products</a>
+            <a class="dropdown-item" *ngIf="authService.currentUser.role.id==1" [routerLink]="['rejected-product']">Rejected Products</a>
+            <a class="dropdown-item" *ngIf="authService.currentUser.role.id==1" [routerLink]="['categories']">Manage Categories</a>
 
           </div>
         </li>
 
-        <li class="nav-item dropdown" *ngIf="authService.isAuthenticated">
+        <li class="nav-item dropdown" *ngIf="authService.isAuthenticated &&( authService.currentUser.role.id==2 || authService.currentUser.role.id==3)">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="admin" aria-expanded="false">
             Reports <span class="caret"></span>
           </a>
           <div class="dropdown-menu" aria-labelledby="admin">
-            <a class="dropdown-item"  (click)="reportMyOrders()" >My Orders</a>
-            <a class="dropdown-item"  (click)="reportProfit()" >My Profits</a>
-            <div class="dropdown-divider"></div>
+            <a class="dropdown-item"  *ngIf="authService.currentUser.role.id==3" (click)="reportMyOrders()" >My Orders</a>
+            <a class="dropdown-item"  *ngIf="authService.currentUser.role.id==2" (click)="reportProfit()" >My Profits</a>
+           
 <!--            <a class="dropdown-item" [routerLink]="['product-list']">Manage Products</a>-->
 <!--            <a class="dropdown-item" [routerLink]="['approve-product']">Review Products</a>-->
 <!--            <a class="dropdown-item" [routerLink]="['rejected-product']">Rejected Products</a>-->
