--- a/web/src/app/modules/admin/manage-users/add-user/add-user.component.html
+++ b/web/src/app/modules/admin/manage-users/add-user/add-user.component.html
@@ -31,7 +31,7 @@
   
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="name">Type</label>
                     <select class="form-control" id="role" [formControl]="form.get('role.id')">
                         <option *ngFor="let cat of lstRoles; let i = index" [value]="lstRoles[i].id">
@@ -42,7 +42,7 @@
                       Name is required
                     </div>
     
-                  </div>
+                  </div> -->
 
 
                 <div class="form-group">
