--- a/web/src/assets/css/style.css
+++ b/web/src/assets/css/style.css
@@ -490,3 +490,7 @@ footer .cpy {
 .underline-text:hover {
   text-decoration: underline;
 }
+.strike-red {
+  text-decoration: line-through;
+  color: red;
+}
