--- a/web/src/app/modules/admin/manage-product/edit-product/edit-product.component.html
+++ b/web/src/app/modules/admin/manage-product/edit-product/edit-product.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="card col-md-8">
-      <div class="card-header">Edit Product</div>
+      <div class="card-header"><span>Edit Product</span>&nbsp;
+        <span><a [routerLink]="['/promotions', product.id]" class="success-color">Manage Promotions</a> </span></div>
       <div class="card-body">
         <form [formGroup]="form">
           <fieldset>
@@ -77,7 +78,7 @@
               <select class="form-control" id="category" [formControl]="form.get('category.id')">
                 <option *ngFor="let cat of lstCategory; let i = index" [value]="lstCategory[i].id">
                   {{lstCategory[i].name}}
-                </option>                  
+                </option>
               </select>
               <div *ngIf="hasError('categoryId')" class="invalid-feedback">
                 category is required
@@ -97,11 +98,11 @@
               </div>
             </div>
 
-           
 
-           
+
+
           </fieldset>
-          <div class="form-group row">             
+          <div class="form-group row">
             <img src="{{hostUrl + img}}"  class="prd-img-lg" >
           </div>
           <div class="row pull-right">
